# niri-sol

./: Cargo.toml  README.md
docs/: known-issues.md
niri-config/src/: layout.rs  sol.rs
sol-config/: Cargo.toml
sol-config/src/: animations.rs  binds.rs  layer_rule.rs  layout.rs  lib.rs  output.rs  sol.rs  window_rule.rs
sol-config/tests/: wiki-parses.rs
sol-ipc/: Cargo.toml
sol-ipc/src/: socket.rs
sol-visual-tests/: Cargo.toml
sol-visual-tests/src/: smithay_view.rs  test_window.rs
sol-wallpaper/: Cargo.toml
sol-wallpaper/shaders/: default.wgsl
sol-wallpaper/src/: config.rs  egl.rs  gpu.rs  img.rs  main.rs  output.rs  render.rs  state.rs
src/: a11y.rs  cli.rs  main.rs  niri.rs
src/animation/: mod.rs
src/backend/: headless.rs  mod.rs  tty.rs  winit.rs
src/dbus/: freedesktop_locale1.rs  gnome_shell_screenshot.rs  mutter_display_config.rs  mutter_screen_cast.rs
src/handlers/: compositor.rs  mod.rs  xdg_shell.rs
src/input/: mod.rs  pick_color_grab.rs
src/ipc/: client.rs  server.rs
src/layer/: mapped.rs  mod.rs
src/layout/: closing_window.rs  floating.rs  focus_ring.rs  insert_hint_element.rs  mod.rs  monitor.rs  moving_snapshot.rs  scrolling.rs  shadow.rs  tab_indicator.rs  tests.rs  tile.rs  workspace.rs
src/protocols/: output_management.rs
src/render_helpers/: background_effect.rs  blur.rs  border.rs  clipped_surface.rs  framebuffer_effect.rs  mod.rs  resize.rs  shadow.rs  snapshot.rs  transparency.rs  xray.rs
src/tests/: .floating.rs.pending-snap  .fullscreen.rs.pending-snap  .window_opening.rs.pending-snap  animations.rs  fixture.rs  floating.rs  server.rs  transactions.rs  window_opening.rs
src/ui/: config_error_notification.rs  exit_confirm_dialog.rs  hotkey_overlay.rs  mru.rs  screenshot_ui.rs
src/utils/: mod.rs  spawning.rs  watcher.rs
src/window/: mapped.rs  mod.rs  unmapped.rs
(+1454 files in other folders)
