[package]
name = "sol-wallpaper"
version.workspace = true
description = "Minimal GLES wallpaper daemon for sol"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[[bin]]
name = "sol-wallpaper"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "string"] }
tracing.workspace = true
tracing-subscriber.workspace = true

smithay-client-toolkit = "0.19.2"
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.10", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
wayland-egl = "0.32.11"
calloop = "0.14.4"
calloop-wayland-source = "0.4.1"

khronos-egl = { version = "6.0.0", features = ["static"] }
glow = "0.16.0"
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
