[package]
name = "sol-wallpaper"
version.workspace = true
description = "wgpu-shader wallpaper daemon for sol"
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[[bin]]
name = "sol-wallpaper"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytemuck = { version = "1.25.0", features = ["derive"] }
clap = { workspace = true, features = ["derive", "string"] }
tracing.workspace = true
tracing-subscriber.workspace = true

smithay-client-toolkit = "0.19.2"
wayland-client = { version = "0.31.14", features = ["system"] }
wayland-protocols = { version = "0.32.10", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
calloop = "0.14.4"
calloop-wayland-source = "0.4.1"

wgpu = "23"
raw-window-handle = "0.6"
pollster = "0.4"
